build/log/idf_py_stdout_output_59221
[1/26] Linking C static library esp-idf/runtime_monitor/libruntime_monitor.a
[2/26] Linking C static library esp-idf/watchdog/libwatchdog.a
[3/26] Building C object esp-idf/fieldbus/CMakeFiles/__idf_fieldbus.dir/fieldbus.c.obj
[4/26] Building C object esp-idf/parser/CMakeFiles/__idf_parser.dir/parser.c.obj
[5/26] Building C object esp-idf/determinism_probe/CMakeFiles/__idf_determinism_probe.dir/determinism_probe.c.obj
FAILED: esp-idf/determinism_probe/CMakeFiles/__idf_determinism_probe.dir/determinism_probe.c.obj 
/home/mateus/.espressif/tools/xtensa-esp32-elf/esp-12.2.0_20230208/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1.2\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/mateus/dev/projects/ENDAP/build/config -I/home/mateus/dev/projects/ENDAP/components/observability/determinism_probe -I/home/mateus/dev/projects/ENDAP/components/observability/determinism_probe/include -I/home/mateus/esp/esp-idf/components/newlib/platform_include -I/home/mateus/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/mateus/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/mateus/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/mateus/esp/esp-idf/components/freertos/esp_additions/include -I/home/mateus/esp/esp-idf/components/freertos/esp_additions/arch/xtensa/include -I/home/mateus/esp/esp-idf/components/esp_hw_support/include -I/home/mateus/esp/esp-idf/components/esp_hw_support/include/soc -I/home/mateus/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/mateus/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/mateus/esp/esp-idf/components/esp_hw_support/port/esp32/private_include -I/home/mateus/esp/esp-idf/components/heap/include -I/home/mateus/esp/esp-idf/components/log/include -I/home/mateus/esp/esp-idf/components/soc/include -I/home/mateus/esp/esp-idf/components/soc/esp32 -I/home/mateus/esp/esp-idf/components/soc/esp32/include -I/home/mateus/esp/esp-idf/components/hal/esp32/include -I/home/mateus/esp/esp-idf/components/hal/include -I/home/mateus/esp/esp-idf/components/hal/platform_port/include -I/home/mateus/esp/esp-idf/components/esp_rom/include -I/home/mateus/esp/esp-idf/components/esp_rom/include/esp32 -I/home/mateus/esp/esp-idf/components/esp_rom/esp32 -I/home/mateus/esp/esp-idf/components/esp_common/include -I/home/mateus/esp/esp-idf/components/esp_system/include -I/home/mateus/esp/esp-idf/components/esp_system/port/soc -I/home/mateus/esp/esp-idf/components/esp_system/port/include/private -I/home/mateus/esp/esp-idf/components/xtensa/include -I/home/mateus/esp/esp-idf/components/xtensa/esp32/include -I/home/mateus/esp/esp-idf/components/esp_timer/include -I/home/mateus/esp/esp-idf/components/lwip/include -I/home/mateus/esp/esp-idf/components/lwip/include/apps -I/home/mateus/esp/esp-idf/components/lwip/include/apps/sntp -I/home/mateus/esp/esp-idf/components/lwip/lwip/src/include -I/home/mateus/esp/esp-idf/components/lwip/port/include -I/home/mateus/esp/esp-idf/components/lwip/port/freertos/include -I/home/mateus/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/mateus/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/mateus/esp/esp-idf/components/driver/include -I/home/mateus/esp/esp-idf/components/driver/deprecated -I/home/mateus/esp/esp-idf/components/driver/analog_comparator/include -I/home/mateus/esp/esp-idf/components/driver/dac/include -I/home/mateus/esp/esp-idf/components/driver/gpio/include -I/home/mateus/esp/esp-idf/components/driver/gptimer/include -I/home/mateus/esp/esp-idf/components/driver/i2c/include -I/home/mateus/esp/esp-idf/components/driver/i2s/include -I/home/mateus/esp/esp-idf/components/driver/ledc/include -I/home/mateus/esp/esp-idf/components/driver/mcpwm/include -I/home/mateus/esp/esp-idf/components/driver/parlio/include -I/home/mateus/esp/esp-idf/components/driver/pcnt/include -I/home/mateus/esp/esp-idf/components/driver/rmt/include -I/home/mateus/esp/esp-idf/components/driver/sdio_slave/include -I/home/mateus/esp/esp-idf/components/driver/sdmmc/include -I/home/mateus/esp/esp-idf/components/driver/sigma_delta/include -I/home/mateus/esp/esp-idf/components/driver/spi/include -I/home/mateus/esp/esp-idf/components/driver/temperature_sensor/include -I/home/mateus/esp/esp-idf/components/driver/touch_sensor/include -I/home/mateus/esp/esp-idf/components/driver/twai/include -I/home/mateus/esp/esp-idf/components/driver/uart/include -I/home/mateus/esp/esp-idf/components/driver/usb_serial_jtag/include -I/home/mateus/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/home/mateus/esp/esp-idf/components/esp_pm/include -I/home/mateus/esp/esp-idf/components/esp_ringbuf/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/mateus/dev/projects/ENDAP=. -fmacro-prefix-map=/home/mateus/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/determinism_probe/CMakeFiles/__idf_determinism_probe.dir/determinism_probe.c.obj -MF esp-idf/determinism_probe/CMakeFiles/__idf_determinism_probe.dir/determinism_probe.c.obj.d -o esp-idf/determinism_probe/CMakeFiles/__idf_determinism_probe.dir/determinism_probe.c.obj -c /home/mateus/dev/projects/ENDAP/components/observability/determinism_probe/determinism_probe.c
/home/mateus/dev/projects/ENDAP/components/observability/determinism_probe/determinism_probe.c:26:6: error: conflicting types for 'determinism_probe_cycle_start'; have 'void(void)'
   26 | void determinism_probe_cycle_start(void)
      |      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /home/mateus/dev/projects/ENDAP/components/observability/determinism_probe/determinism_probe.c:1:
/home/mateus/dev/projects/ENDAP/components/observability/determinism_probe/include/determinism_probe.h:8:6: note: previous declaration of 'determinism_probe_cycle_start' with type 'void(uint64_t)' {aka 'void(long long unsigned int)'}
    8 | void determinism_probe_cycle_start(uint64_t now);
      |      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/mateus/dev/projects/ENDAP/components/observability/determinism_probe/determinism_probe.c:35:6: error: conflicting types for 'determinism_probe_cycle_end'; have 'void(void)'
   35 | void determinism_probe_cycle_end(void)
      |      ^~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/mateus/dev/projects/ENDAP/components/observability/determinism_probe/include/determinism_probe.h:10:6: note: previous declaration of 'determinism_probe_cycle_end' with type 'void(uint64_t)' {aka 'void(long long unsigned int)'}
   10 | void determinism_probe_cycle_end(uint64_t now);
      |      ^~~~~~~~~~~~~~~~~~~~~~~~~~~
[6/26] Linking C static library esp-idf/control_kernel/libcontrol_kernel.a
[7/26] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
[8/26] Linking C static library esp-idf/parser/libparser.a
[9/26] Performing build step for 'bootloader'
[1/1] cd /home/mateus/dev/projects/ENDAP/build/bootloader/esp-idf/esptool_py && /home/mateus/.espressif/python_env/idf5.1_py3.12_env/bin/python /home/mateus/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/mateus/dev/projects/ENDAP/build/bootloader/bootloader.bin
Bootloader binary size 0x6810 bytes. 0x7f0 bytes (7%) free.
[10/26] Building C object esp-idf/core/CMakeFiles/__idf_core.dir/core_boot.c.obj
ninja: build stopped: subcommand failed.
